--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "echarts": "^5.4.2",
     "element-plus": "^2.3.6",
     "express": "^4.18.2",
+    "html2canvas": "^1.4.1",
     "loadsh": "^0.0.4",
     "moment": "^2.29.4",
     "pinia": "^2.0.36",
