--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "loadsh": "^0.0.4",
     "moment": "^2.29.4",
     "pinia": "^2.0.36",
+    "qrcode": "^1.5.3",
     "rollup-plugin-visualizer": "^5.9.0",
     "screenfull": "^6.0.2",
     "vue": "^3.3.2",
