--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "cesium": "^1.116.0",
     "echarts": "^5.4.2",
     "element-plus": "^2.3.6",
     "express": "^4.18.2",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefix": "^1.0.1",
+    "cssnano": "^6.1.0",
     "postcss-loader": "^7.3.3",
     "sass": "^1.62.1",
     "unplugin-auto-import": "^0.16.4",
