--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "html2canvas": "^1.4.1",
     "loadsh": "^0.0.4",
     "moment": "^2.29.4",
+    "ol": "^9.2.4",
+    "ol-cesium": "^2.17.0",
     "pinia": "^2.0.36",
     "qrcode": "^1.5.3",
     "rollup-plugin-visualizer": "^5.9.0",
